examples/errors/property_not_found.vut
let user = { name: "Vut" }
user.age
